changed some text, attempt to fix image stretch for safari

--- a/styles.css
+++ b/styles.css
@@ -20,13 +20,12 @@ p{
 .music {
     line-height: 1.5;
 }
-
 .index-container{
     display: flex;
     flex-direction: column;
-    padding: 20px;
     gap: 20px;
     min-height: 100%;
+    padding: 30px;
 }
 .block-1{
     display: flex;
@@ -42,11 +41,14 @@ p{
     flex-direction: row;
     width: 100%;
     gap: 20px;
+    padding: 0 30px;
 }
 .block-3{
     display: flex;
     flex-direction: row;
     width: 100%;
+    gap: 20px;
+    padding: 0 30px;
 }
 .name-button{
     text-align: center;
@@ -55,6 +57,7 @@ p{
     font-family: "broadacre-regular-1", sans-serif;
     font-size: 18px;
     font-weight: 800;
+    padding-left: 30px;
 }
 .name-button a{
     color: #fff;
@@ -100,18 +103,24 @@ p{
     flex-wrap: nowrap;
     align-items: center;
     justify-content: center;
-    padding: 10px;
-    gap: 5px;
-    font-size: 32px;
-    font-family: "roca", sans-serif;
-    font-weight: 400;
-    font-style: normal;
+    padding: 0px 30px 0px;
+    gap: 20px;
 }
 .about-arrow a{
     color: black;
 }
 .about-arrow a:hover{
     color: #d98282;
+}
+.arrow{
+    font-size: 52px;
+}
+.about-me{
+    font-size: 32px;
+    font-family: "roca", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    padding: 0;
 }
 #background-skills{
     padding-top: 60px;
@@ -156,19 +165,23 @@ p{
     font-size: 24px;
     padding: 30px;
 }
-.skills-D img{
-    max-width: 100%;
-    height: 100%;
+.logo-item img{
+    width: 50px;
+    height: auto;
 }
 .logo-row{
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
+    width: 100%;
+    height: 100%;
+    min-height: 50%;
+    padding: 5px;
     gap: 10px;
 }
-.logo-item{
-    flex: 1 1 100%;
-    max-width: 15%;
-    height: 100%;
+.logo-row:first-child{
+    display: flex;
+    align-items: flex-start;
 }
 #greeting{
     font-family: "roca", sans-serif;
@@ -250,11 +263,6 @@ p{
     .music-block-1{
         flex-wrap: wrap;
     }
-    .logo-item{
-        flex: 1 1 100%;
-        max-width: 20%;
-        height: 100%;
-    }
     .index-container{
         display: flex;
         flex-direction: column;
@@ -332,11 +340,14 @@ p{
         justify-items: center;
         background-color: #335145;
     }
-    .h2video{
-        padding-left: 20px;
+    .parent1, .parent2{
+        justify-content: center;
     }
     .swiper-pagination{
-    display: none;
+        display: none;
+    }
+    .h2video{
+        text-align: center;
     }
 }
 @media screen and (min-width: 801px) {
@@ -360,21 +371,22 @@ p{
 .carousel_container img{
     width: 100%;
 }
+.video-container{
+    padding: 30px;
+}
 .h2video{
-    background-color: transparent;
-    text-align: center;
-    padding: 20px;
-    width: fit-content;
     font-size: 16px;
     color: black;
     font-family: "roca", sans-serif;
     font-weight: 400;
     font-style: normal;
+    font-size: 20px;
+    padding: 0 30px;
 }
 .video{
     padding: 10px;
-    width: 400;
-    height: 252;
+    width: 400px;
+    height: 252px;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3)
 }
 .parent1{
@@ -403,6 +415,7 @@ p{
     display: flex;
     flex-direction: row;
     width: 100%;
+    padding: 30px;
 }
 .music-container a{
     text-decoration: none;
@@ -411,6 +424,17 @@ p{
 .music-container a:hover{
     background-color: transparent;
     color: #d98282;
+}
+#music-opening, #experience-heading, #learn-more{
+    font-family: "roca", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+#experience-heading, #learn-more{
+    font-size: 20px;
+}
+#music-opening{
+    font-size: 32px;
 }
 .music_summary li{
     list-style-type: circle;
@@ -429,7 +453,6 @@ p{
     width: 50%;
     height: inherit;
     min-height: 100%;
-    padding: 30px;
 }
 .flute_picture{
     width: 50%;
